align items end to fix alignment when displaying errors

--- a/services/app-web/src/components/FilterAccordion/FilterDateRange/FilterDateRange.module.scss
+++ b/services/app-web/src/components/FilterAccordion/FilterDateRange/FilterDateRange.module.scss
@@ -12,6 +12,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 32px;
+  align-items: end;
 }
 
 [class='usa-fieldset'] {
